# desktop-tutorial

ChargePulseOne/: .gitignore.txt  测试报告.md  系统设计文档.md
ChargePulseOne/AdminPortal/: CMakeLists.txt  build.bat
ChargePulseOne/AdminPortal/include/: DashboardWidget.h
ChargePulseOne/AdminPortal/resources/styles/: admin_style.qss
ChargePulseOne/AdminPortal/src/: AdminMainWindow.cpp  AdminMainWindow.h  AlarmManagementWidget.cpp  AlarmManagementWidget.h  ChargerManagementWidget.cpp  ChargerManagementWidget.h  CouponManagementWidget.cpp  CouponManagementWidget.h  DashboardWidget.cpp  DashboardWidget.h  FinanceReportWidget.cpp  FinanceReportWidget.h  HealthDashboardWidget.cpp  HealthDashboardWidget.h  LogAuditWidget.cpp  LogAuditWidget.h  LoginDialog.cpp  LoginDialog.h  MemberManagementWidget.cpp  MemberManagementWidget.h  NetworkManager.cpp  NetworkManager.h  OrderManagementWidget.cpp  OrderManagementWidget.h  PushNotificationWidget.cpp  PushNotificationWidget.h  RateManagementWidget.cpp  RateManagementWidget.h  ReportWidget.cpp  ReportWidget.h  ReservationManagementWidget.cpp  ReservationManagementWidget.h  SystemSettingsWidget.cpp  SystemSettingsWidget.h  UserManagementWidget.cpp  UserManagementWidget.h  common.h  main.cpp
ChargePulseOne/ChargePulseMobile/: CMakeLists.txt  TEST_REPORT.md  build.bat
ChargePulseOne/ChargePulseMobile/qml/: main.qml
ChargePulseOne/ChargePulseMobile/qml/components/: ActionButton.qml  BottomNavBar.qml  ChargerCard.qml  EmptyState.qml  LoadingOverlay.qml  NetworkIndicator.qml  OrderItem.qml  SectionHeader.qml  Toast.qml
ChargePulseOne/ChargePulseMobile/qml/pages/: AlarmListPage.qml  ChargeMonitorPage.qml  ChargerDetailPage.qml  CouponPage.qml  DiscoverPage.qml  HomePage.qml  LoginPage.qml  MePage.qml  MemberPage.qml  MessageDetailPage.qml  MessagePage.qml  OrderDetailPage.qml  OrderPage.qml  PaymentPage.qml  ProfilePage.qml  RatePage.qml  RechargePage.qml  ReservationPage.qml  ScanPage.qml  SettingsPage.qml  StatisticsPage.qml  VehiclePage.qml
ChargePulseOne/ChargePulseMobile/src/: NetworkManager.cpp  NetworkManager.h  ThemeManager.cpp  ThemeManager.h  main.cpp
ChargePulseOne/ChargingServer/: CMakeLists.txt
ChargePulseOne/ChargingServer/include/: ChargingService.h
ChargePulseOne/ChargingServer/src/: AlarmService.cpp  AlarmService.h  AnalyticsService.cpp  AnalyticsService.h  BillingService.cpp  BillingService.h  ChargerService.cpp  ChargerService.h  ChargingService.cpp  ChargingService.h  ClientHandler.cpp  ClientHandler.h  ConfigManager.cpp  ConfigManager.h  ConfigService.cpp  ConfigService.h  ConnectionPool.cpp  ConnectionPool.h  CouponService.cpp  CouponService.h  CryptoUtils.cpp  CryptoUtils.h  DatabaseManager.cpp  DatabaseManager.h  HealthPredictor.h  LogService.cpp  LogService.h  Logger.cpp  Logger.h  MemberService.cpp  MemberService.h  MessageService.cpp  MessageService.h  ModbusController.cpp  ModbusController.h  NotificationService.cpp  NotificationService.h  OrderService.cpp  OrderService.h  PaymentService.cpp  (+17 more)
ChargePulseOne/docs/: CEO-Strategy-Report.md  Executive-Summary.md  Market-Analysis-Report.md
SmartSched-HIS/: .gitignore  CMakeLists.txt  CMakeLists_qtcreator.txt  QT_CREATOR_GUIDE.md  README.md  SmartSched-HIS.config  config.ini  deploy.sh
SmartSched-HIS/client/: CMakeLists.txt
SmartSched-HIS/client/include/smartsched/client/: datamodel.h  networkclient.h
SmartSched-HIS/client/qml/common/: Button.qml  Theme.qml
SmartSched-HIS/client/qml/display/: DisplayBoard.qml
SmartSched-HIS/client/qml/patient/: DepartmentList.qml  QueueStatusPage.qml  RegistrationPage.qml  SuccessDialog.qml  main.qml
SmartSched-HIS/client/src/admin/: CMakeLists.txt  adminmain.cpp
SmartSched-HIS/client/src/base/: CMakeLists.txt  datamodel.cpp  networkclient.cpp
SmartSched-HIS/client/src/display/: CMakeLists.txt  displaymain.cpp
SmartSched-HIS/client/src/doctor/: CMakeLists.txt  doctormain.cpp
SmartSched-HIS/client/src/patient/: CMakeLists.txt  patientmain.cpp
SmartSched-HIS/common/: CMakeLists.txt
SmartSched-HIS/common/include/smartsched/cluster/: cluster.h
SmartSched-HIS/common/include/smartsched/common/: compiler.h  macros.h  version.h
SmartSched-HIS/common/include/smartsched/protocol/: commands.h  message.h  protocol.h
SmartSched-HIS/common/include/smartsched/security/: auth.h  security.h
SmartSched-HIS/common/include/smartsched/utils/: bytebuffer.h  cache.h  config.h  csv_exporter.h  datetime.h  filelogger.h  json_helper.h  logger.h
SmartSched-HIS/common/src/: logger.cpp
SmartSched-HIS/common/src/security/: auth.cpp  security.cpp
SmartSched-HIS/common/src/utils/: config.cpp  json.cpp
SmartSched-HIS/doc/api/: API_DOC.md
SmartSched-HIS/doc/database/: init.sql
SmartSched-HIS/doc/deployment/: DEPLOYMENT.md
SmartSched-HIS/doc/manual/: USER_MANUAL.md
SmartSched-HIS/docker/: Dockerfile.client  Dockerfile.server  docker-compose.yml  nginx.conf  prometheus.yml  server.json
SmartSched-HIS/server/: CMakeLists.txt
SmartSched-HIS/server/include/smartsched/server/: crypto.h  database.h  service.h  statistics.h  statistics_service.h  tcpserver.h
SmartSched-HIS/server/src/: main.cpp
SmartSched-HIS/server/src/biz/: CMakeLists.txt  service.cpp  statistics.cpp
SmartSched-HIS/server/src/core/: CMakeLists.txt  tcpserver.cpp
SmartSched-HIS/server/src/crypto/: CMakeLists.txt  crypto.cpp
SmartSched-HIS/server/src/db/: CMakeLists.txt  database.cpp
SmartSched-HIS/tests/: CMakeLists.txt  test_auth.cpp  test_cache.cpp  test_common.cpp  test_crypto.cpp  test_integration.cpp  test_protocol.cpp  test_security.cpp
SmartSched-HIS/tools/stresstest/: CMakeLists.txt
SmartSched-HIS/tools/stresstest/include/: stresstest.h
SmartSched-HIS/tools/stresstest/src/: stresstest.cpp
